services/couchbase-edge-server/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: couchbase-edge-server
spec:
  type: ClusterIP
  selector:
    app: couchbase-edge-server
  ports:
    - name: public
      port: 80
      targetPort: 59840
